[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests
norecursedirs = .git

[flake8]
max-line-length = 79

[mypy]
python_version = 3.6
no_implicit_optional = True
warn_unused_configs = True
warn_unused_ignores = True
warn_unreachable = True
[mypy-urllib3.*]
ignore_missing_imports = True
