[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests
norecursedirs = .git

[flake8]
max-line-length = 79

[mypy]
python_version = 3.7
disallow_subclassing_any = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_incomplete_stub = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
[mypy-urllib3.*]
ignore_missing_imports = True
