# -*- coding: utf-8 -*-
#
# Copyright (C) 2016-2017
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, version 2 of the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.


MAINTAINERCLEANFILES = \
        $(srcdir)/Makefile.in \
        $(NULL)

pycrestdir = $(amcrestpythonlibdir)

pycrest_PYTHON = \
	__init__.py \
	http.py \
	config.py \
	system.py \
	network.py \
	motion_detection.py \
	snapshot.py \
	user_management.py \
	event.py \
	audio.py \
	record.py \
	video.py \
	log.py \
	ptz.py \
	special.py \
	utils.py \
	nas.py \
	storage.py \
	$(NULL)
